--- a/index.html
+++ b/index.html
@@ -1,85 +1,102 @@
 <!doctype html>
-<html lang="sv">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Find the Lost Soul</title>
+  <title>You Found the Lost Soul — It’s You</title>
   <style>
     :root { --gap: 14px; }
     * { box-sizing: border-box; }
     body {
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       margin: 0; padding: 24px;
-      min-height: 100svh; display: flex; flex-direction: column; align-items: center; gap: var(--gap);
+      min-height: 100svh;
+      display: flex; flex-direction: column; align-items: center; justify-content: center; gap: var(--gap);
       background: #0b0b0c; color: #f5f5f7;
+      text-align: center;
     }
-    h1 { font-size: 1.25rem; margin: 0; line-height: 1.25; text-align: center; }
-    p  { margin: 0; opacity: .9; text-align: center; max-width: 520px; }
-    .card { border: 1px solid #2a2a2e; border-radius: 16px; padding: 16px; background: #131316; width: 100%; max-width: 560px; }
+    h1 {
+      font-size: 1.3rem;
+      font-weight: 500;
+      letter-spacing: 0.03em;
+      margin: 0;
+      max-width: 540px;
+      line-height: 1.4;
+    }
     video {
-      width: 100%; max-width: 560px; border-radius: 16px; background: #000;
-      aspect-ratio: 3/4; object-fit: cover;
+      width: 100%; max-width: 520px;
+      border-radius: 16px;
+      background: #000;
+      aspect-ratio: 3/4;
+      object-fit: cover;
+      display: none;
     }
-    .row { display: flex; gap: 10px; flex-wrap: wrap; justify-content: center; }
-    button {
-      padding: 12px 16px; border-radius: 999px; border: 1px solid #2a2a2e;
-      background: #1b1b1f; color: #fff; cursor: pointer;
+    button, a.button {
+      padding: 12px 20px;
+      border-radius: 999px;
+      border: 1px solid #2a2a2e;
+      background: #1b1b1f;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1rem;
+      text-decoration: none;
     }
-    button:active { transform: translateY(1px); }
-    #status { font-size: .95rem; opacity: .9 }
-    .small { font-size: .85rem; opacity: .75 }
+    button:active, a.button:active {
+      transform: translateY(1px);
+    }
+    p {
+      opacity: 0.8;
+      max-width: 500px;
+      margin: 0;
+    }
+    footer {
+      font-size: 0.85rem;
+      opacity: 0.6;
+      margin-top: 16px;
+    }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Find the Lost Soul — kanske du.</h1>
-    <p>Tryck “Tillåt” när mobilen frågar om kamera. Inget sparas eller skickas.</p>
-  </div>
+  <h1>You found the lost soul — it’s you.</h1>
+  <p>When you’re ready, allow your camera to reveal what was never missing.</p>
 
+  <button id="btnStart">Turn on camera</button>
   <video id="player" autoplay playsinline muted></video>
+  <a href="#" id="btnStop" class="button" style="display:none;">Turn off camera</a>
 
-  <div class="row">
-    <button id="btnFront">Öppna selfiekameran</button>
-    <button id="btnBack">Öppna bakkameran</button>
-    <button id="btnStop">Stäng kameran</button>
-  </div>
-
-  <p id="status">Redo.</p>
-
-  <div class="card small">
-    <p><strong>Integritet:</strong> Kamerabilden visas endast lokalt i din webbläsare. Ingen inspelning. Ingen uppladdning.</p>
-    <p>Om inget händer: öppna länken i din vanliga webbläsare (Safari/Chrome) istället för en in-app-skanner.</p>
-  </div>
+  <footer>
+    No data is saved or sent. The camera feed remains only on your device.
+  </footer>
 
   <script>
-    const statusEl = document.getElementById('status');
     const player = document.getElementById('player');
+    const startBtn = document.getElementById('btnStart');
+    const stopBtn = document.getElementById('btnStop');
     let stream;
 
-    async function openCamera(constraints) {
-      statusEl.textContent = 'Begär kameratillstånd…';
+    async function openCamera() {
       try {
-        stream = await navigator.mediaDevices.getUserMedia(constraints);
+        stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: { ideal: "user" } }, audio: false });
         player.srcObject = stream;
-        statusEl.textContent = 'Kameran är igång. ✨';
+        player.style.display = 'block';
+        startBtn.style.display = 'none';
+        stopBtn.style.display = 'inline-block';
       } catch (err) {
+        alert('Camera access denied or unavailable.');
         console.error(err);
-        statusEl.textContent = 'Kunde inte öppna kameran: ' + (err && err.name ? err.name : err);
       }
     }
 
     function stopCamera() {
       if (stream) stream.getTracks().forEach(t => t.stop());
       player.srcObject = null;
-      statusEl.textContent = 'Kameran stoppad.';
+      player.style.display = 'none';
+      startBtn.style.display = 'inline-block';
+      stopBtn.style.display = 'none';
     }
 
-    document.getElementById('btnFront').onclick = () => openCamera({ video: { facingMode: { ideal: "user" } }, audio: false });
-    document.getElementById('btnBack').onclick  = () => openCamera({ video: { facingMode: { ideal: "environment" } }, audio: false });
-    document.getElementById('btnStop').onclick  = stopCamera;
-
-    // Du kan försöka starta frontkameran automatiskt:
-    // openCamera({ video: { facingMode: { ideal: "user" } }, audio: false });
+    startBtn.onclick = openCamera;
+    stopBtn.onclick = (e) => { e.preventDefault(); stopCamera(); };
   </script>
 </body>
 </html>
