--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>You found the lost soul — it's you</title>
+  <title>Face the power of technology</title>
   <style>
     * { box-sizing: border-box; }
     :root { --gap: 16px; }
@@ -13,41 +13,67 @@
       background: #0b0b0c; color: #f5f5f7; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       text-align: center;
     }
-    h1 { margin: 0; font-weight: 500; letter-spacing: .02em; max-width: 560px; line-height: 1.35; }
-    p  { margin: 0; opacity: .85; }
+
+    /* Camera frame */
     .frame {
-      position: relative; width: 100%; max-width: 520px; border-radius: 16px; overflow: hidden;
-      background: #000; aspect-ratio: 3/4;
+      position: relative; width: 100%; max-width: 520px;
+      border-radius: 16px; overflow: hidden; background: #000; aspect-ratio: 3/4;
     }
     video { width: 100%; height: 100%; object-fit: cover; display: none; }
-    .overlay {
-      position: absolute; inset: 0; display: none; align-items: center; justify-content: center;
-      padding: 24px; background: linear-gradient(0deg, rgba(0,0,0,.35), rgba(0,0,0,.35));
-      opacity: 0; transition: opacity .6s ease;
+
+    /* Top banner text (always visible while camera is on) */
+    .banner {
+      position: absolute; left: 0; right: 0; top: 0; padding: 14px 16px;
+      background: linear-gradient(to bottom, rgba(0,0,0,.6), rgba(0,0,0,0) 70%);
+      color: #fff; font-weight: 600; letter-spacing: .02em; line-height: 1.35;
+      text-wrap: balance; display: none; pointer-events: none;
+      text-shadow: 0 1px 2px rgba(0,0,0,.6);
     }
-    .overlay.show { opacity: 1; }
-    .overlay p { max-width: 460px; line-height: 1.35; }
-    .overlay .big { font-size: 1.1rem; font-weight: 600; margin-bottom: .5rem; }
-    .controls { display: flex; gap: 12px; }
+
+    /* Ghost overlay line (fades in after start) */
+    .ghost {
+      position: absolute; inset: 0; display: none; align-items: center; justify-content: center;
+      padding: 24px; pointer-events: none; text-wrap: balance;
+    }
+    .ghost p {
+      margin: 0; max-width: 460px; line-height: 1.35; color: #fff;
+      opacity: 0; transform: translateY(6px);
+      text-shadow: 0 1px 2px rgba(0,0,0,.6);
+    }
+    .ghost.show p { animation: ghostIn 3.5s ease-out forwards; animation-delay: 1.2s; }
+    @keyframes ghostIn {
+      0%   { opacity: 0; transform: translateY(6px); }
+      30%  { opacity: .35; }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Controls + footer */
+    .controls { display: flex; gap: 12px; margin-top: 10px; }
     .btn {
       padding: 12px 18px; border-radius: 999px; border: 1px solid #2a2a2e; background: #1b1b1f;
       color: #fff; cursor: pointer; text-decoration: none; display: inline-block;
     }
     .btn:active { transform: translateY(1px); }
     footer { font-size: .85rem; opacity: .65; max-width: 560px; }
+
+    @media (prefers-reduced-motion: reduce) {
+      .ghost.show p { animation: none; opacity: 1; transform: none; }
+    }
   </style>
 </head>
 <body>
-  <h1>You found the lost soul — it’s you.</h1>
-  <p>When you’re ready, allow your camera to reveal what was never missing.</p>
 
   <div class="frame">
     <video id="player" autoplay playsinline muted></video>
-    <div id="overlay" class="overlay" aria-live="polite">
-      <div>
-        <p class="big">You broke the code. Face the power of technology.</p>
-        <p>You are in charge of how you use it.</p>
-      </div>
+
+    <!-- top-of-camera banner -->
+    <div id="banner" class="banner">
+      You broke the code. Face the power of technology.
+    </div>
+
+    <!-- ghostly line that fades in over video -->
+    <div id="ghost" class="ghost">
+      <p>You are in charge of how you use it.</p>
     </div>
   </div>
 
@@ -59,21 +85,26 @@
   <footer>No data is saved or sent. The camera feed stays on your device.</footer>
 
   <script>
-    const player = document.getElementById('player');
-    const overlay = document.getElementById('overlay');
+    const player   = document.getElementById('player');
+    const banner   = document.getElementById('banner');
+    const ghost    = document.getElementById('ghost');
     const startBtn = document.getElementById('btnStart');
-    const stopBtn = document.getElementById('btnStop');
+    const stopBtn  = document.getElementById('btnStop');
     let stream;
 
     async function openCamera() {
       try {
-        stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: { ideal: "user" } }, audio: false });
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: { ideal: "user" } }, audio: false
+        });
         player.srcObject = stream;
         player.style.display = 'block';
-        overlay.style.display = 'flex';
-        setTimeout(() => overlay.classList.add('show'), 300);
+        banner.style.display = 'block';
+        ghost.style.display  = 'flex';
+        // trigger ghost fade-in
+        requestAnimationFrame(() => ghost.classList.add('show'));
         startBtn.style.display = 'none';
-        stopBtn.style.display = 'inline-block';
+        stopBtn.style.display  = 'inline-block';
       } catch (err) {
         alert('Camera access denied or unavailable.');
         console.error(err);
@@ -84,14 +115,15 @@
       if (stream) stream.getTracks().forEach(t => t.stop());
       player.srcObject = null;
       player.style.display = 'none';
-      overlay.style.display = 'none';
-      overlay.classList.remove('show');
+      banner.style.display = 'none';
+      ghost.classList.remove('show');
+      ghost.style.display = 'none';
       startBtn.style.display = 'inline-block';
-      stopBtn.style.display = 'none';
+      stopBtn.style.display  = 'none';
     }
 
     startBtn.onclick = openCamera;
-    stopBtn.onclick = (e) => { e.preventDefault(); stopCamera(); };
+    stopBtn.onclick  = (e) => { e.preventDefault(); stopCamera(); };
   </script>
 </body>
 </html>
