--- a/index.html
+++ b/index.html
@@ -14,64 +14,110 @@
       text-align: center;
     }
 
+    h1, h2 {
+      margin: 0;
+      line-height: 1.3;
+    }
+    h1 {
+      font-size: 1.3rem;
+      font-weight: 700;
+    }
+    h2 {
+      font-size: 1.1rem;
+      font-weight: 500;
+      opacity: .95;
+    }
+
     /* Camera frame */
     .frame {
-      position: relative; width: 100%; max-width: 520px;
-      border-radius: 16px; overflow: hidden; background: #000; aspect-ratio: 3/4;
+      position: relative;
+      width: 100%;
+      max-width: 520px;
+      border-radius: 16px;
+      overflow: hidden;
+      background: #000;
+      aspect-ratio: 3/4;
     }
+
     video {
-      width: 100%; height: 100%; object-fit: cover; display: none;
-      transform: scaleX(-1); /* mirror like a real reflection */
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: none;
+      transform: scaleX(-1); /* mirror reflection */
     }
 
-    /* Top banner (always visible) */
-    .banner {
-      position: absolute; left: 0; right: 0; top: 0;
-      padding: 14px 16px 22px 16px;
-      background: linear-gradient(to bottom, rgba(0,0,0,.65), rgba(0,0,0,0) 70%);
-      color: #fff; letter-spacing: .02em; line-height: 1.35;
-      text-wrap: balance; pointer-events: none;
-      text-shadow: 0 1px 2px rgba(0,0,0,.6);
-    }
-    .banner .strong { font-weight: 700; }
-    .banner .sub    { font-weight: 500; opacity: .95; }
-
-    /* Ghost line that appears AFTER start, also at top */
+    /* Ghost overlay text appears after start */
     .ghost {
-      margin-top: 6px;
-      font-weight: 500; opacity: 0; transform: translateY(-4px);
+      position: absolute;
+      top: 12px;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-weight: 500;
+      opacity: 0;
+      transform: translateY(-4px);
+      color: #fff;
+      text-shadow: 0 1px 2px rgba(0,0,0,.6);
+      pointer-events: none;
     }
-    .ghost.show { animation: ghostIn 3s ease-out forwards; animation-delay: .9s; }
+
+    .ghost.show {
+      animation: ghostIn 3s ease-out forwards;
+      animation-delay: 1s;
+    }
 
     @keyframes ghostIn {
       0%   { opacity: 0; transform: translateY(-4px); }
-      35%  { opacity: .35; }
+      35%  { opacity: .4; }
       100% { opacity: 1; transform: translateY(0); }
     }
 
-    .controls { display: flex; gap: 12px; margin-top: 12px; }
-    .btn {
-      padding: 12px 18px; border-radius: 999px; border: 1px solid #2a2a2e; background: #1b1b1f;
-      color: #fff; cursor: pointer; text-decoration: none; display: inline-block;
+    .controls {
+      display: flex;
+      gap: 12px;
+      margin-top: 12px;
     }
-    .btn:active { transform: translateY(1px); }
-    footer { font-size: .85rem; opacity: .65; max-width: 560px; }
+
+    .btn {
+      padding: 12px 18px;
+      border-radius: 999px;
+      border: 1px solid #2a2a2e;
+      background: #1b1b1f;
+      color: #fff;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .btn:active {
+      transform: translateY(1px);
+    }
+
+    footer {
+      font-size: .85rem;
+      opacity: .65;
+      max-width: 560px;
+    }
+
     @media (prefers-reduced-motion: reduce) {
-      .ghost.show { animation: none; opacity: 1; transform: none; }
+      .ghost.show {
+        animation: none;
+        opacity: 1;
+        transform: none;
+      }
     }
   </style>
 </head>
 <body>
 
+  <!-- Text above the frame -->
+  <h1>You broke the code!!!</h1>
+  <h2>Face the power of technology.</h2>
+
   <div class="frame">
     <video id="player" autoplay playsinline muted></video>
-
-    <!-- Top-of-frame text shown before (and after) start -->
-    <div class="banner">
-      <div class="strong">You broke the code!!!</div>
-      <div class="sub">Face the power of technology.</div>
-      <div id="ghostLine" class="ghost">You are in charge of how you use it.</div>
-    </div>
+    <div id="ghost" class="ghost">You are in charge of how you use it.</div>
   </div>
 
   <div class="controls">
@@ -82,23 +128,24 @@
   <footer>No data is saved or sent. The camera feed stays on your device.</footer>
 
   <script>
-    const player    = document.getElementById('player');
-    const ghostLine = document.getElementById('ghostLine');
-    const startBtn  = document.getElementById('btnStart');
-    const stopBtn   = document.getElementById('btnStop');
+    const player = document.getElementById('player');
+    const ghost = document.getElementById('ghost');
+    const startBtn = document.getElementById('btnStart');
+    const stopBtn = document.getElementById('btnStop');
     let stream;
 
     async function openCamera() {
       try {
         stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode: { ideal: "user" } }, audio: false
+          video: { facingMode: { ideal: "user" } },
+          audio: false
         });
         player.srcObject = stream;
         player.style.display = 'block';
-        // reveal ghost line at the top after start
-        ghostLine.classList.add('show');
+        // show ghost line with fade
+        ghost.classList.add('show');
         startBtn.style.display = 'none';
-        stopBtn.style.display  = 'inline-block';
+        stopBtn.style.display = 'inline-block';
       } catch (err) {
         alert('Camera access denied or unavailable.');
         console.error(err);
@@ -109,13 +156,14 @@
       if (stream) stream.getTracks().forEach(t => t.stop());
       player.srcObject = null;
       player.style.display = 'none';
-      ghostLine.classList.remove('show');
+      ghost.classList.remove('show');
       startBtn.style.display = 'inline-block';
-      stopBtn.style.display  = 'none';
+      stopBtn.style.display = 'none';
     }
 
     startBtn.onclick = openCamera;
-    stopBtn.onclick  = (e) => { e.preventDefault(); stopCamera(); };
+    stopBtn.onclick = (e) => { e.preventDefault(); stopCamera(); };
   </script>
 </body>
 </html>
+
