--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@
     /* Ghost overlay text appears after start */
     .ghost {
       position: absolute;
-      top: 12px;
+      top: 25%; /* lower the text */
       left: 0;
       right: 0;
       text-align: center;
-      font-weight: 500;
+      font-weight: 700; /* bold */
+      font-size: 1.4rem; /* larger */
       opacity: 0;
       transform: translateY(-4px);
-      color: #fff;
-      text-shadow: 0 1px 2px rgba(0,0,0,.6);
+      color: #ffffff;
+      text-shadow: 0 1px 4px rgba(0,0,0,.8);
       pointer-events: none;
     }
 
@@ -117,7 +118,7 @@
 
   <div class="frame">
     <video id="player" autoplay playsinline muted></video>
-    <div id="ghost" class="ghost">You are in charge of how you use it.</div>
+    <div id="ghost" class="ghost"><span style="font-size:1.5rem;">YOU</span> are in charge of how you use it.</div>
   </div>
 
   <div class="controls">
@@ -166,4 +167,3 @@
   </script>
 </body>
 </html>
-
