--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     /* Ghost overlay text appears after start */
     .ghost {
       position: absolute;
-      top: 25%; /* lower the text */
+      top: 18%; /* moved slightly up */
       left: 0;
       right: 0;
       text-align: center;
-      font-weight: 700; /* bold */
-      font-size: 1.4rem; /* larger */
+      font-weight: 700;
+      font-size: 1.4rem;
       opacity: 0;
       transform: translateY(-4px);
       color: #ffffff;
@@ -167,3 +167,4 @@
   </script>
 </body>
 </html>
+
