--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     /* Ghost overlay text appears after start */
     .ghost {
       position: absolute;
-      top: 18%; /* moved slightly up */
+      top: 8%; /* moved higher up */
       left: 0;
       right: 0;
       text-align: center;
